# sled

./: .cproject  .gitignore  .project
Makefiles/: card10.GNUmakefile  sledconf.card10
src/: asl.c  asl.h  block_for.h  main.c  mod.c  modloader.c  modloader.h  perf.h  random.c  taskpool.c  timers.c  timers.h  types.h
src/ext/card10/sled/: README.md  main.c  meson.build
src/modules/: bgm_fish.c  bgm_opc.c  bgm_pixelflut.c  gfx_affinematrix.c  gfx_afterglow.c  gfx_balls.c  gfx_bttrblls.c  gfx_candyflow.c  gfx_candyswarm.c  gfx_checkerboard.c  gfx_clock.c  gfx_colorwheel.c  gfx_cube.c  gfx_disturbedcandy.c  gfx_fire.c  gfx_ghostery.c  gfx_glowfield.c  gfx_gol.c  gfx_golc.c  gfx_invfourier.c  gfx_mandelbrot.c  gfx_mandelbrot2.c  gfx_math_sinpi.c  gfx_matrix.c  gfx_maze.c  gfx_partirush.c  gfx_plasma.c  gfx_rainbow.c  gfx_random_rects.c  gfx_reddot.c  gfx_rgbmatrix.c  gfx_rule90.c  gfx_sinefield.c  gfx_sinematrix.c  gfx_sort1D.c  gfx_sort2D.c  gfx_sparkburn.c  gfx_starfield.c  gfx_testmatrix.c  gfx_text.c  (+7 more)
src/os/: os_3ds.c  os_dummy.c  os_freertos.c  os_unix.c
